Fix login and sign up pages on small screens

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -4,7 +4,6 @@ body
     place-content: center;
     width: 100vw;
     height: 100vh;
-    font-family: "poppins";
     background: -webkit-linear-gradient(rgba(41, 40, 44, 0.6),rgba(51, 51, 59, 0.6)) , url("../images/praying.jpg") ;
     background: -moz-linear-gradient(rgba(41, 40, 44, 0.6),rgba(51, 51, 59, 0.6)) , url("../images/praying.jpg") ;
     background: -o-linear-gradient(rgba(41, 40, 44, 0.6),rgba(51, 51, 59, 0.6)) , url("../images/praying.jpg") ;
@@ -18,6 +17,17 @@ body
     padding: 10px 30px;
     box-shadow: 2px 2px 5px rgb(151, 150, 150);
     background-color: white;
+}
+
+.signing-in > a{
+    width: 100%;
+    display: grid;
+    justify-content: center;
+}
+
+.signing-in img{
+    height: 100px;
+    width: 170px;
 }
 
 #login-form{
@@ -43,8 +53,6 @@ body
     border: 0px;
     outline: none;
     font-weight: bold;
-    
-
 }
 
 #loginSubmitButton:hover
@@ -67,11 +75,3 @@ form+div > a
 {
     text-decoration: underline;
 }
-
-
-/* ======================= Reponsive ================ */
-
-@media screen and (max-width : 575px){
-
-}
-
