--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -4,7 +4,6 @@ body
     place-content: center;
     width: 100vw;
     height: 100vh;
-    font-family: "poppins";
     background: -webkit-linear-gradient(rgba(41, 40, 44, 0.6),rgba(51, 51, 59, 0.6)) , url("../images/praying.jpg") ;
     background: -moz-linear-gradient(rgba(41, 40, 44, 0.6),rgba(51, 51, 59, 0.6)) , url("../images/praying.jpg") ;
     background: -o-linear-gradient(rgba(41, 40, 44, 0.6),rgba(51, 51, 59, 0.6)) , url("../images/praying.jpg") ;
@@ -19,7 +18,6 @@ body
     padding: 10px 30px;
     box-shadow: 2px 2px 5px rgb(151, 150, 150);
     background-color: white;
-
 }
 
 .signing-up > a
@@ -67,4 +65,14 @@ body
 #login-on-sign-up-page
 {
     font-size: 13px;
+}
+
+
+/* ======================= Reponsive ================ */
+
+@media screen and (max-width : 575px){
+    .signing-up
+    {
+        width: 100%;
+    }
 }
